--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,5 +1,9 @@
 .cardContainer {
   /* display */
+
+  SOME KIND OF CHANGE
+  
+  
   border: 1px solid #CAD0D2;
   border-radius: 4px;
   overflow: hidden;
